--- a/templates/base.html
+++ b/templates/base.html
@@ -39,17 +39,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('.collapsible').collapsible();
-            $('select').material_select();
-            $(".button-collapse").sideNav();
-        });
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
-        document.getElementById("matfix").addEventListener("click", function(e) {
-	    e.stopPropagation();
-        });
-
-    </script>
 </body>
 </html>
