--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,8 +17,8 @@
                     {{ work.genre }}<br>
                     {{ work.writing }}<br>
                     </p>
-                <a href="/"><i class="material-icons right">edit</i></a>
-                <a href="/"><i class="material-icons right">delete</i></a>
+                <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
+                <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             {% endif %}
         </div>
     {% endfor %}
