--- a/templates/works.html
+++ b/templates/works.html
@@ -20,7 +20,7 @@
         </form>
     </div>
 <div>
-<a href="/"><i class="material-icons right">add_circle</i></a>
+<a href="{{ url_for('add_work') }}"><i class="material-icons right">add_circle</i></a>
 </div>
 
 
@@ -33,8 +33,8 @@
             {{ work.writing }}<br>
             </p>
             {% if session.user|lower == work.author %}
-                <a href="/"><i class="material-icons right">edit</i></a>
-                <a href="/"><i class="material-icons right">delete</i></a>
+                <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
+                <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             {% else %}
             <a href="/"><i class="material-icons right">favorite</i></a>
             <a href="/"><i class="material-icons right">favorite_border</i></a>
