--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,17 @@
         </nav>
     </header>
     <div class="container">
+        {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            {% for message in messages %}
+                <row>
+                    <p class="{{message.category}}">{{ message }}</p>
+                </row>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
+    <div class="container">
     {% block content %}
     {% endblock %}
     </div>
