--- a/templates/works.html
+++ b/templates/works.html
@@ -32,7 +32,7 @@
             {{ work.genre }}<br>
             {{ work.writing }}<br>
             </p>
-            {% if session.user|lower == work.author %}
+            {% if session["user"]|lower == work.author|lower %}
                 <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
                 <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             {% else %}
