--- a/templates/create.html
+++ b/templates/create.html
@@ -3,12 +3,11 @@
 
 <h3>Create!</h3>
 <div class="row">
-    <form action="{{ url_for('add_work') }}" method="POST" class="col s12">
+    <form action="{{ url_for('insert_work') }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">person</i>
-                <input id="author" name="author" type="text" class="validate">
-                <label for="icon_prefix">Author</label>
+                <p>Author:{{ username }}</p>
             </div>
         </div>
         <div class="row">
@@ -47,11 +46,14 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Publish Work
                 <i class="material-icons right">playlist_add</i>
             </button>
         </div>
     </form>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 {% endblock %}
+
