--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -3,12 +3,11 @@
 
 <h3>Edit</h3>
 <div class="row">
-    <form action="{{ url_for('edit_work') }}" method="POST" class="col s12">
+    <form action="{{ url_for('update_work', work_id=work._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">person</i>
-                <input id="author" name="author" type="text" class="validate">
-                <label for="icon_prefix">Author</label>
+                <p>Author:{{ username }}</p>
             </div>
         </div>
         <div class="row">
@@ -17,23 +16,29 @@
                 <select id="genre" name="genre_name">
                     <option value="" disabled selected>Choose Genre</option>
                     {% for gen in genres %}
-                    <option value="{{gen.genre_name}}">{{gen.genre_name}}</option>
+                        {% if gen.genre_name == work.genre %}
+                        <option value="{{ gen.genre_name }}" selected>{{ gen.genre_name }}</option>
+                        {% else %}
+                        <option value="{{gen.genre_name }}">{{ gen.genre_name }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
-                <label>Genre</label>
+                <label for="genre_name">Genre</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">grade</i>
-                <input id="title" name="title" type="text" class="validate">
+                <input id="title" name="title" type="text" class="validate" value="{{ work.title }}" required>
                 <label for="icon_prefix">Title</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">create</i>
-                <textarea name="writing" id="writing" class="materialize-textarea"></textarea>
+                <textarea name="writing" id="writing" class="materialize-textarea" value="{{ work.writing }}" required>
+                {{- work.writing -}}
+                </textarea>
                 <label for="icon_prefix">Creation</label>
             </div>
         </div>
@@ -47,7 +52,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Update Work
                 <i class="material-icons right">playlist_add</i>
             </button>
         </div>
