--- a/templates/works.html
+++ b/templates/works.html
@@ -10,6 +10,15 @@
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Works</label>
                 </div>
+                <div class="input-field col s12 m8">
+                    <select id="search-key" name="search-key">
+                        <option value="" disabled selected>Choose Genre</option>
+                        {% for key in keys %}
+                        <option value="{{key.key_name}}">{{key.key_name}}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Search For</label>
+                </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_works') }}" class="red btn text-shadow">Reset</a>
                     <button type="submit" class="light-blue darken-1 btn text-shadow">
@@ -23,21 +32,56 @@
 <a href="{{ url_for('add_work') }}"><i class="material-icons right">add_circle</i></a>
 </div>
 
+<div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('filter') }}" method="POST" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <select id="genre-filter" name="genre_name">
+                        <option value="" disabled selected>Choose Genre</option>
+                        {% for gen in genres %}
+                        <option value="{{gen.genre_name}}">{{gen.genre_name}}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Genre</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_works') }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="light-blue darken-1 btn text-shadow">
+                        <i class="fas fa-search left"></i> Filter
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+<div>
+<a href="{{ url_for('add_work') }}"><i class="material-icons right">add_circle</i></a>
+</div>
 
 <div>
     {% for work in works %}
+        {% set writingloop = loop %}
         <div>
             <p>{{ work.title }}<br>
             {{ work.author }}<br>
             {{ work.genre }}<br>
-            {{ work.writing }}<br>
+            <span id="writing-{{ writingloop.index }}">{{ work.writing }}</span><br>
             </p>
+            <script>
+            function formatWriting(){
+                let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
+                console.log(unformat);
+                let trimmed = unformat.trim();
+                let formatted = trimmed.replace(/\n/g, "<br>");
+                return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
+            }
+            formatWriting();
+            </script>
             {% if session["user"]|lower == work.author|lower %}
                 <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
                 <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             {% else %}
-            <a href="/"><i class="material-icons right">favorite</i></a>
-            <a href="/"><i class="material-icons right">favorite_border</i></a>
+                <a href="/"><i class="material-icons right">favorite</i></a>
+                <a href="/"><i class="material-icons right">favorite_border</i></a>
             {% endif %}
         </div>
     {% endfor %}
