Fixed filter related bug in profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row card-panel grey lighten-5">
-        <form action="{{ url_for('filter') }}" method="POST" class="col s12">
+        <form action="{{ url_for('filter_profile') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
                     <select id="genre-filter" name="genre_name">
