--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
                     <li><a href="{{ url_for('get_works') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
                         <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% else %}
                         <li><a href="{{ url_for('register') }}">Sign Up</a></li>
@@ -28,6 +29,7 @@
                     <li><a href="{{ url_for('get_works') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
                         <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% else %}
                         <li><a href="{{ url_for('register') }}">Sign Up</a></li>
