--- a/templates/works.html
+++ b/templates/works.html
@@ -28,9 +28,7 @@
             </div>
         </form>
     </div>
-<div>
-<a href="{{ url_for('add_work') }}"><i class="material-icons right">add_circle</i></a>
-</div>
+
 
 <div class="row card-panel grey lighten-5">
         <form action="{{ url_for('filter_works') }}" method="POST" class="col s12">
@@ -58,31 +56,42 @@
 </div>
 
 <div>
-    {% for work in works %}
-        {% set writingloop = loop %}
-        <div>
-            <p>{{ work.title }}<br>
-            {{ work.author }}<br>
-            {{ work.genre }}<br>
-            <span id="writing-{{ writingloop.index }}">{{ work.writing }}</span><br>
-            </p>
-            <script>
-            function formatWriting(){
-                let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
-                console.log(unformat);
-                let trimmed = unformat.trim();
-                let formatted = trimmed.replace(/\n/g, "<br>");
-                return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
-            }
-            formatWriting();
-            </script>
-            {% if session["user"]|lower == work.author|lower %}
-                <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
-                <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
-            {% else %}
-                <a href="/"><i class="material-icons right">favorite</i></a>
-                <a href="/"><i class="material-icons right">favorite_border</i></a>
-            {% endif %}
+    {% for like in likes %}
+        {% for work in works %}
+       
+            {% set writingloop = loop %}
+            <div>
+                <p>
+                <a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a><br>
+                {{ work.author }}<br>
+                {{ work.genre }}<br>
+                <span id="writing-{{ writingloop.index }}">{{ work.writing }}</span><br>
+                </p>
+                <script>
+                function formatWriting(){
+                    let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
+                    console.log(unformat);
+                    let trimmed = unformat.trim();
+                    let formatted = trimmed.replace(/\n/g, "<br>");
+                    return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
+                }
+                formatWriting();
+                </script>
+             
+                {% if session["user"]|lower == work.author|lower %}
+                    <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
+                    <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
+                    <p>{{ session["user"]|lower }}
+                    {{ work.author|lower }}
+                    {{ work._id }}
+                    {{ like.work_id }}
+                    </p>
+                {% elif ( (session["user"]|lower == like.user|lower) and (work._id == like.work_id) ) %}
+                    <a href="/"><i class="material-icons right">favorite</i></a>
+                {% else %}
+                    <a href="/"><i class="material-icons right">favorite_border</i></a>
+                {% endif %}
+        {% endfor %}
         </div>
     {% endfor %}
 </div>
