--- a/templates/base.html
+++ b/templates/base.html
@@ -40,11 +40,11 @@
         </nav>
     </header>
     <div class="container">
-        {% with messages = get_flashed_messages(with_categories=True) %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            {% for message in messages %}
+            {% for category, message in messages %}
                 <row>
-                    <p class="{{message.category}}">{{ message }}</p>
+                    <p class="{{category}}">{{ message }}</p>
                 </row>
             {% endfor %}
         {% endif %}
