--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -32,20 +32,26 @@
             </div>
         </form>
     </div>
-
+<div>
     {% for work in works %}
-        {% if session["user"]|lower == work.author|lower %}
-            <div>
-                <p>
-                <a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a><br>
-                {{ work.author }}<br>
-                {{ work.genre }}<br>
-                {{ work.writing }}<br>
-                </p>
-                <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
-                <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
-            </div>
-        {% endif %}
+        {% set writingloop = loop %}
+        <p>
+        <a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a><br>
+        {{ work.author }}<br>
+        {{ work.genre }}<br>
+        <span id="writing-{{ writingloop.index }}">{{ work.writing }}</span><br>
+        </p>
+        <script>
+        function formatWriting(){
+            let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
+            console.log(unformat);
+            let trimmed = unformat.trim();
+            let formatted = trimmed.replace(/\n/g, "<br>");
+            return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
+        }
+        formatWriting();
+        </script>
     {% endfor %}
+</div>
 
 {% endblock %}
