--- a/templates/works.html
+++ b/templates/works.html
@@ -56,42 +56,27 @@
 </div>
 
 <div>
-    {% for like in likes %}
-        {% for work in works %}
-       
-            {% set writingloop = loop %}
-            <div>
-                <p>
-                <a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a><br>
-                {{ work.author }}<br>
-                {{ work.genre }}<br>
-                <span id="writing-{{ writingloop.index }}">{{ work.writing }}</span><br>
-                </p>
-                <script>
-                function formatWriting(){
-                    let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
-                    console.log(unformat);
-                    let trimmed = unformat.trim();
-                    let formatted = trimmed.replace(/\n/g, "<br>");
-                    return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
-                }
-                formatWriting();
-                </script>
-             
-                {% if session["user"]|lower == work.author|lower %}
-                    <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
-                    <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
-                    <p>{{ session["user"]|lower }}
-                    {{ work.author|lower }}
-                    {{ work._id }}
-                    {{ like.work_id }}
-                    </p>
-                {% elif ( (session["user"]|lower == like.user|lower) and (work._id == like.work_id) ) %}
-                    <a href="/"><i class="material-icons right">favorite</i></a>
-                {% else %}
-                    <a href="/"><i class="material-icons right">favorite_border</i></a>
-                {% endif %}
-        {% endfor %}
+    {% for work in works %}
+        {% set writingloop = loop %}
+        <div>
+            <p><a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a></p>
+            <p>{{ work.author }}</p>
+            <p>{{ work.genre }}</p>
+            <p>Writings:</p>
+            {% for writing in format_poetry_writing(work.writing) %}
+            <p>{{writing}}</p>
+            {% endfor %}
+            <!-- <span id="writing-{{ writingloop.index }}">{{ format_poetry_writing(work.writing) }}</span><br> -->
+            <!-- <script>
+            function formatWriting(){
+                let unformat = document.getElementById("writing-{{ writingloop.index }}").innerHTML;
+                console.log(unformat);
+                let trimmed = unformat.trim();
+                let formatted = trimmed.replace(/\n/g, "<br>");
+                return document.getElementById("writing-{{ writingloop.index }}").innerHTML = formatted;
+            }
+            formatWriting();
+            </script> -->
         </div>
     {% endfor %}
 </div>
