--- a/templates/create.html
+++ b/templates/create.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">local_library</i>
-                <select id="genre" name="genre_name">
+                <select id="genre" name="genre_name" required>
                     <option value="" disabled selected>Choose Genre</option>
                     {% for gen in genres %}
                     <option value="{{gen.genre_name}}">{{gen.genre_name}}</option>
@@ -25,24 +25,15 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">grade</i>
-                <input id="title" name="title" type="text" class="validate">
+                <input id="title" name="title" type="text" class="validate" required>
                 <label for="icon_prefix">Title</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">create</i>
-                <textarea name="writing" id="writing" class="materialize-textarea"></textarea>
+                <textarea name="writing" id="writing" class="materialize-textarea" required></textarea>
                 <label for="icon_prefix">Creation</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="switch">
-                <label>
-                    <input id="feedback" class="feedback" type="checkbox">
-                    <span class="lever"></span>
-                    Enable Feedback
-                </label>
             </div>
         </div>
         <div class="row">
