--- a/templates/profile.html
+++ b/templates/profile.html
@@ -36,16 +36,19 @@
     {% for work in works %}
         {% if session["user"]|lower == work.author|lower %}
             <div>
-                <p>
-                {{ work.title }}<br>
-                {{ work.author }}<br>
-                {{ work.genre }}<br>
-                {{ work.writing }}<br>
-                </p>
+                <div>
+                    <p><a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a></p>
+                    <p>{{ work.author }}</p>
+                    <p>{{ work.genre }}</p>
+                    <p>Writings:</p>
+                    {% for writing in format_poetry_writing(work.writing) %}
+                        <p>{{writing}}</p>
+                    {% endfor %}
+                </div>
+        
                 <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
                 <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             </div>
         {% endif %}
     {% endfor %}
-
 {% endblock %}
